external/qt-everywhere-opensource-src-5.8.0/qtscxml/tests/auto/parser/data/invalidContent.scxml.errors
:/tst_parser/data/invalidContent.scxml:9:53: error: Unexpected element scxml
:/tst_parser/data/invalidContent.scxml:13:22: error: Error parsing SCXML file: Opening and ending tag mismatch.
