external/qt-everywhere-opensource-src-5.8.0/qtscxml/tests/auto/parser/data/invalidContent.scxml
<?xml version="1.0" encoding="UTF-8"?>
<scxml
    xmlns="http://www.w3.org/2005/07/scxml"
    version="1.0"
>
    <state id="somewhere">
        <invoke type="http://www.w3.org/TR/scxml/">
            <content />
                <scxml name="anywhere" version="1.0">
                    <state id="here">
                    </state>
                </scxml>
            </content>
        </invoke>
    </state>
</scxml>
